chore(test): test canvas

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      id="aclib"
+      type="text/javascript"
+      src="//acscdn.com/script/aclib.js"
+    ></script>
     <meta charset="utf-8" />
     <link
       rel="apple-touch-icon"
@@ -90,6 +95,11 @@
     -->
     <title>ParrotSour</title>
   </head>
+  <script type="text/javascript">
+    aclib.runAutoTag({
+      zoneId: "kqxhbobapf",
+    })
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
