--- a/public/index.html
+++ b/public/index.html
@@ -136,10 +136,11 @@
       <div
         style="
           position: absolute;
-          top: 600px;
+          top: 620px;
           right: 20px;
           width: 120px;
           border: 5px solid grey;
+          margin-top: 5px;
         "
       >
         This is an ad.
