--- a/public/index.html
+++ b/public/index.html
@@ -104,19 +104,19 @@
   </script> -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div>
+    <div style="width: 80%">
       <div id="root"></div>
       <!-- Long bannner bottom -->
-      <div>
+      <!-- <div>
         <div style="margin: auto">This is an ad.</div>
         <script type="text/javascript">
           aclib.runBanner({
             zoneId: "8114146",
           })
         </script>
-      </div>
+      </div> -->
       <!-- Tall bannner top right -->
-      <div
+      <!-- <div
         style="
           position: absolute;
           top: 0px;
@@ -131,9 +131,9 @@
             zoneId: "8114150",
           })
         </script>
-      </div>
+      </div> -->
       <!-- Tall bannner mid right -->
-      <div
+      <!-- <div
         style="
           position: absolute;
           top: 620px;
@@ -149,7 +149,7 @@
             zoneId: "8114726",
           })
         </script>
-      </div>
+      </div> -->
     </div>
     <!--
       This HTML file is a template.
